--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
 
 <head>
   <script src="main.js"></script>
+  <script src="anime.min.js"></script>
   <link rel="stylesheet" href="style.css">
+  
 </head>
 
 <body>
- <div id="title">Tic | Tac | Toe</div>
+ <!-- <div id="title">Tic | Tac | Toe</div> -->
+
+ <h1 class="ml4">
+    <span class="letters letters-1">Tic</span>
+    <span class="letters letters-2">Tac</span>
+    <span class="letters letters-3">Toe!</span>
+  </h1>
+  
   <div id="page">
     <ul>
       <li></li>
@@ -22,6 +31,65 @@
     </ul>
     <div id='message' title="click to play again"></div>
   </div>
-</body>
 
+
+  <script>
+    var ml4 = {};
+ml4.opacityIn = [0,1];
+ml4.scaleIn = [0.2, 1];
+ml4.scaleOut = 3;
+ml4.durationIn = 800;
+ml4.durationOut = 600;
+ml4.delay = 500;
+
+anime.timeline({loop: true})
+  .add({
+    targets: '.ml4 .letters-1',
+    opacity: ml4.opacityIn,
+    scale: ml4.scaleIn,
+    duration: ml4.durationIn
+  }).add({
+    targets: '.ml4 .letters-1',
+    opacity: 0,
+    scale: ml4.scaleOut,
+    duration: ml4.durationOut,
+    easing: "easeInExpo",
+    delay: ml4.delay
+  }).add({
+    targets: '.ml4 .letters-2',
+    opacity: ml4.opacityIn,
+    scale: ml4.scaleIn,
+    duration: ml4.durationIn
+  }).add({
+    targets: '.ml4 .letters-2',
+    opacity: 0,
+    scale: ml4.scaleOut,
+    duration: ml4.durationOut,
+    easing: "easeInExpo",
+    delay: ml4.delay
+  }).add({
+    targets: '.ml4 .letters-3',
+    opacity: ml4.opacityIn,
+    scale: ml4.scaleIn,
+    duration: ml4.durationIn
+  }).add({
+    targets: '.ml4 .letters-3',
+    opacity: 0,
+    scale: ml4.scaleOut,
+    duration: ml4.durationOut,
+    easing: "easeInExpo",
+    delay: ml4.delay
+  }).add({
+    targets: '.ml4',
+    opacity: 0,
+    duration: 500,
+    delay: 500
+  });
+
+
+
+    </script>
+
+
+</body>
 </html>
