--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
             <h2 class="submit">
             <button onclick="window.onload()" class="submit">Game Start</button> 
            </h2>
-          </div>
+<!-- 
+           <button onclick="location.href ='/ai/index.html'" class="AI">Forever alone? Try to beat the AI</button>  -->
+         </div>
           
           <!-- 
           <div class="players">X or O
@@ -117,8 +119,5 @@
                 delay: 500
           }); 
             </script>
-
-            
-
       </body>
 </html>
