--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <script src="anime.min.js"></script>
         <link rel="stylesheet" href="style.css">
       </head>
-
+      
+      <!-- animated text with anime JS  -->
       <body>
           <h1 class="movingText">
               <span class="letters letters-1">Tic</span>
@@ -14,6 +15,7 @@
               <span class="letters letters-3">Toe!</span>
           </h1>
 
+          <!-- choose token div class box -->
           <div class="token">
              <h2 class="token1">Token 1
                <input type="text" name="inputtoken1" id="token1">
@@ -26,6 +28,7 @@
             </h2>
          </div>
 
+          <!-- game box and score stays here -->
           <div class="page">
 
             <ul>
@@ -106,6 +109,5 @@
                 delay: 500
             }); 
           </script>
-
        </body>
 </html>
